[package]
name = "auth-git2-pem"
version = "0.5.7-pem"
description = "Fork of auth-git2 (Authentication for `git2`) with PEM fallback support for SSH keys using osshkeys"
license = "BSD-2-Clause"
authors = ["Maarten de Vries <maarten@de-vri.es>",
"Stiff-Rock <yaguitor@gmail.com>"]
repository = "https://github.com/Stiff-Rock/auth-git2-rs"
documentation = "https://docs.rs/auth-git2"
keywords = ["git", "auth", "credentials", "git2", "authentication"]
categories = ["authentication"]

edition = "2021"
publish = ["crates-io"]

[features]
log = ["dep:log"]

[dependencies]
dirs = "6.0.0"
git2 = { version = ">0.14, <21.0" }
log = { version = "0.4.19", optional = true }
terminal-prompt = "0.2.2"

tempfile = "3.20.0"
ssh-key = { version = "0.6.7", features = ["rsa"] }
rsa = { version = "0.9.8" }

[dev-dependencies]
assert2 = "0.3.11"
auth-git2-pem = { path = ".", features = ["log"] }
clap = { version = "4.3.21", features = ["derive"] }
env_logger = "0.11.6"
git2 = ">=0.14, <21.0"
